src/main/java/org/example/antlr/LuaParser.java
// Generated from C:/javastuff/LuaCompiler/src/main/antlr/LuaParser.g4 by ANTLR 4.13.1

package org.example.antlr;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LuaParser extends Parser {
    public static final int
            SEMI = 1, EQ = 2, BREAK = 3, GOTO = 4, DO = 5, END = 6, WHILE = 7, REPEAT = 8, UNTIL = 9,
            IF = 10, THEN = 11, ELSEIF = 12, ELSE = 13, FOR = 14, COMMA = 15, IN = 16, FUNCTION = 17,
            LOCAL = 18, LT = 19, GT = 20, RETURN = 21, CONTINUE = 22, CC = 23, NIL = 24, FALSE = 25,
            TRUE = 26, DOT = 27, SQUIG = 28, MINUS = 29, POUND = 30, OP = 31, CP = 32, NOT = 33, LL = 34,
            GG = 35, AMP = 36, SS = 37, PER = 38, COL = 39, LE = 40, GE = 41, AND = 42, OR = 43, PLUS = 44,
            STAR = 45, OCU = 46, CCU = 47, OB = 48, CB = 49, EE = 50, DD = 51, PIPE = 52, CARET = 53,
            SLASH = 54, DDD = 55, SQEQ = 56, TYPE_I = 57, TYPE_F = 58, TYPE_S = 59, TYPE_B = 60,
            TYPE_T = 61, TYPE_V = 62, TYPE_A = 63, NAME = 64, NORMALSTRING = 65, CHARSTRING = 66,
            LONGSTRING = 67, INT = 68, HEX = 69, FLOAT = 70, HEX_FLOAT = 71, COMMENT = 72, WS = 73,
            NL = 74, SHEBANG = 75;
    public static final int
            RULE_start_ = 0, RULE_chunk = 1, RULE_block = 2, RULE_stat = 3, RULE_ifstat = 4,
            RULE_whileloop = 5, RULE_forloop = 6, RULE_vardecl = 7, RULE_funcdecl = 8,
            RULE_attnamelist = 9, RULE_attrib = 10, RULE_retstat = 11, RULE_label = 12,
            RULE_funcname = 13, RULE_varlist = 14, RULE_namelist = 15, RULE_explist = 16,
            RULE_exp = 17, RULE_binop = 18, RULE_multop = 19, RULE_addop = 20, RULE_relop = 21,
            RULE_boolop = 22, RULE_bitop = 23, RULE_unop = 24, RULE_var = 25, RULE_prefixexp = 26,
            RULE_functioncall = 27, RULE_args = 28, RULE_funcbody = 29, RULE_parlist = 30,
            RULE_tableconstructor = 31, RULE_fieldlist = 32, RULE_field = 33, RULE_fieldsep = 34,
            RULE_number = 35, RULE_string = 36, RULE_typehint = 37;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public LuaParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "start_", "chunk", "block", "stat", "ifstat", "whileloop", "forloop",
                "vardecl", "funcdecl", "attnamelist", "attrib", "retstat", "label", "funcname",
                "varlist", "namelist", "explist", "exp", "binop", "multop", "addop",
                "relop", "boolop", "bitop", "unop", "var", "prefixexp", "functioncall",
                "args", "funcbody", "parlist", "tableconstructor", "fieldlist", "field",
                "fieldsep", "number", "string", "typehint"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "';'", "'='", "'break'", "'goto'", "'do'", "'end'", "'while'",
                "'repeat'", "'until'", "'if'", "'then'", "'elseif'", "'else'", "'for'",
                "','", "'in'", "'function'", "'local'", "'<'", "'>'", "'return'", "'continue'",
                "'::'", "'nil'", "'false'", "'true'", "'.'", "'~'", "'-'", "'#'", "'('",
                "')'", "'not'", "'<<'", "'>>'", "'&'", "'//'", "'%'", "':'", "'<='",
                "'>='", "'and'", "'or'", "'+'", "'*'", "'{'", "'}'", "'['", "']'", "'=='",
                "'..'", "'|'", "'^'", "'/'", "'...'", "'~='", "'int'", "'float'", "'string'",
                "'boolean'", "'table'", "'void'", "'array'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "SEMI", "EQ", "BREAK", "GOTO", "DO", "END", "WHILE", "REPEAT",
                "UNTIL", "IF", "THEN", "ELSEIF", "ELSE", "FOR", "COMMA", "IN", "FUNCTION",
                "LOCAL", "LT", "GT", "RETURN", "CONTINUE", "CC", "NIL", "FALSE", "TRUE",
                "DOT", "SQUIG", "MINUS", "POUND", "OP", "CP", "NOT", "LL", "GG", "AMP",
                "SS", "PER", "COL", "LE", "GE", "AND", "OR", "PLUS", "STAR", "OCU", "CCU",
                "OB", "CB", "EE", "DD", "PIPE", "CARET", "SLASH", "DDD", "SQEQ", "TYPE_I",
                "TYPE_F", "TYPE_S", "TYPE_B", "TYPE_T", "TYPE_V", "TYPE_A", "NAME", "NORMALSTRING",
                "CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT",
                "WS", "NL", "SHEBANG"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "LuaParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final Start_Context start_() throws RecognitionException {
        Start_Context _localctx = new Start_Context(_ctx, getState());
        enterRule(_localctx, 0, RULE_start_);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(76);
                chunk();
                setState(77);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ChunkContext chunk() throws RecognitionException {
        ChunkContext _localctx = new ChunkContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_chunk);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(79);
                block();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BlockContext block() throws RecognitionException {
        BlockContext _localctx = new BlockContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_block);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(84);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(81);
                                stat();
                            }
                        }
                    }
                    setState(86);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 0, _ctx);
                }
                setState(88);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6291464L) != 0)) {
                    {
                        setState(87);
                        retstat();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final StatContext stat() throws RecognitionException {
        StatContext _localctx = new StatContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_stat);
        try {
            setState(98);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(90);
                    match(SEMI);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(91);
                    vardecl();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(92);
                    functioncall(0);
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(93);
                    match(BREAK);
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(94);
                    whileloop();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(95);
                    ifstat();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(96);
                    forloop();
                }
                break;
                case 8:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(97);
                    funcdecl();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IfstatContext ifstat() throws RecognitionException {
        IfstatContext _localctx = new IfstatContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_ifstat);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(100);
                match(IF);
                setState(101);
                exp(0);
                setState(102);
                match(THEN);
                setState(103);
                block();
                setState(111);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == ELSEIF) {
                    {
                        {
                            setState(104);
                            match(ELSEIF);
                            setState(105);
                            exp(0);
                            setState(106);
                            match(THEN);
                            setState(107);
                            block();
                        }
                    }
                    setState(113);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(116);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ELSE) {
                    {
                        setState(114);
                        match(ELSE);
                        setState(115);
                        block();
                    }
                }

                setState(118);
                match(END);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final WhileloopContext whileloop() throws RecognitionException {
        WhileloopContext _localctx = new WhileloopContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_whileloop);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(120);
                match(WHILE);
                setState(121);
                exp(0);
                setState(122);
                match(DO);
                setState(123);
                block();
                setState(124);
                match(END);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ForloopContext forloop() throws RecognitionException {
        ForloopContext _localctx = new ForloopContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_forloop);
        int _la;
        try {
            setState(148);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 6, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(126);
                    match(FOR);
                    setState(127);
                    match(NAME);
                    setState(128);
                    match(EQ);
                    setState(129);
                    exp(0);
                    setState(130);
                    match(COMMA);
                    setState(131);
                    exp(0);
                    setState(134);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == COMMA) {
                        {
                            setState(132);
                            match(COMMA);
                            setState(133);
                            exp(0);
                        }
                    }

                    setState(136);
                    match(DO);
                    setState(137);
                    block();
                    setState(138);
                    match(END);
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(140);
                    match(FOR);
                    setState(141);
                    namelist();
                    setState(142);
                    match(IN);
                    setState(143);
                    explist();
                    setState(144);
                    match(DO);
                    setState(145);
                    block();
                    setState(146);
                    match(END);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VardeclContext vardecl() throws RecognitionException {
        VardeclContext _localctx = new VardeclContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_vardecl);
        int _la;
        try {
            setState(160);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case OP:
                case NAME:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(150);
                    varlist();
                    setState(151);
                    match(EQ);
                    setState(152);
                    explist();
                }
                break;
                case LOCAL:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(154);
                    match(LOCAL);
                    setState(155);
                    attnamelist();
                    setState(158);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == EQ) {
                        {
                            setState(156);
                            match(EQ);
                            setState(157);
                            explist();
                        }
                    }

                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncdeclContext funcdecl() throws RecognitionException {
        FuncdeclContext _localctx = new FuncdeclContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_funcdecl);
        try {
            setState(170);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case FUNCTION:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(162);
                    match(FUNCTION);
                    setState(163);
                    funcname();
                    setState(164);
                    funcbody();
                }
                break;
                case LOCAL:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(166);
                    match(LOCAL);
                    setState(167);
                    match(FUNCTION);
                    setState(168);
                    match(NAME);
                    setState(169);
                    funcbody();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AttnamelistContext attnamelist() throws RecognitionException {
        AttnamelistContext _localctx = new AttnamelistContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_attnamelist);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(172);
                match(NAME);
                setState(173);
                attrib();
                setState(179);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(174);
                            match(COMMA);
                            setState(175);
                            match(NAME);
                            setState(176);
                            attrib();
                        }
                    }
                    setState(181);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AttribContext attrib() throws RecognitionException {
        AttribContext _localctx = new AttribContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_attrib);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(185);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == LT) {
                    {
                        setState(182);
                        match(LT);
                        setState(183);
                        match(NAME);
                        setState(184);
                        match(GT);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final RetstatContext retstat() throws RecognitionException {
        RetstatContext _localctx = new RetstatContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_retstat);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(193);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case RETURN: {
                        setState(187);
                        match(RETURN);
                        setState(189);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        if (((((_la - 24)) & ~0x3f) == 0 && ((1L << (_la - 24)) & 280377616761591L) != 0)) {
                            {
                                setState(188);
                                explist();
                            }
                        }

                    }
                    break;
                    case BREAK: {
                        setState(191);
                        match(BREAK);
                    }
                    break;
                    case CONTINUE: {
                        setState(192);
                        match(CONTINUE);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                setState(196);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == SEMI) {
                    {
                        setState(195);
                        match(SEMI);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final LabelContext label() throws RecognitionException {
        LabelContext _localctx = new LabelContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_label);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(198);
                match(CC);
                setState(199);
                match(NAME);
                setState(200);
                match(CC);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncnameContext funcname() throws RecognitionException {
        FuncnameContext _localctx = new FuncnameContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_funcname);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(202);
                match(NAME);
                setState(207);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == DOT) {
                    {
                        {
                            setState(203);
                            match(DOT);
                            setState(204);
                            match(NAME);
                        }
                    }
                    setState(209);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(212);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == COL) {
                    {
                        setState(210);
                        match(COL);
                        setState(211);
                        match(NAME);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VarlistContext varlist() throws RecognitionException {
        VarlistContext _localctx = new VarlistContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_varlist);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(214);
                var();
                setState(219);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(215);
                            match(COMMA);
                            setState(216);
                            var();
                        }
                    }
                    setState(221);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final NamelistContext namelist() throws RecognitionException {
        NamelistContext _localctx = new NamelistContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_namelist);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(222);
                match(NAME);
                setState(225);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == COL) {
                    {
                        setState(223);
                        match(COL);
                        setState(224);
                        typehint();
                    }
                }

                setState(235);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 20, _ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        {
                            {
                                setState(227);
                                match(COMMA);
                                setState(228);
                                match(NAME);
                                setState(231);
                                _errHandler.sync(this);
                                _la = _input.LA(1);
                                if (_la == COL) {
                                    {
                                        setState(229);
                                        match(COL);
                                        setState(230);
                                        typehint();
                                    }
                                }

                            }
                        }
                    }
                    setState(237);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 20, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExplistContext explist() throws RecognitionException {
        ExplistContext _localctx = new ExplistContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_explist);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(238);
                exp(0);
                setState(243);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(239);
                            match(COMMA);
                            setState(240);
                            exp(0);
                        }
                    }
                    setState(245);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpContext exp() throws RecognitionException {
        return exp(0);
    }

    private ExpContext exp(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExpContext _localctx = new ExpContext(_ctx, _parentState);
        ExpContext _prevctx = _localctx;
        int _startState = 34;
        enterRecursionRule(_localctx, 34, RULE_exp, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(258);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case NIL: {
                        setState(247);
                        match(NIL);
                    }
                    break;
                    case FALSE: {
                        setState(248);
                        match(FALSE);
                    }
                    break;
                    case TRUE: {
                        setState(249);
                        match(TRUE);
                    }
                    break;
                    case INT:
                    case HEX:
                    case FLOAT:
                    case HEX_FLOAT: {
                        setState(250);
                        number();
                    }
                    break;
                    case NORMALSTRING:
                    case CHARSTRING:
                    case LONGSTRING: {
                        setState(251);
                        string();
                    }
                    break;
                    case DDD: {
                        setState(252);
                        match(DDD);
                    }
                    break;
                    case OP:
                    case NAME: {
                        setState(253);
                        prefixexp();
                    }
                    break;
                    case OCU: {
                        setState(254);
                        tableconstructor();
                    }
                    break;
                    case SQUIG:
                    case MINUS:
                    case POUND:
                    case NOT: {
                        setState(255);
                        unop();
                        setState(256);
                        exp(2);
                    }
                    break;
                    default:
                        throw new NoViableAltException(this);
                }
                _ctx.stop = _input.LT(-1);
                setState(266);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 23, _ctx);
                while (_alt != 2 && _alt != ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new ExpContext(_parentctx, _parentState);
                                pushNewRecursionContext(_localctx, _startState, RULE_exp);
                                setState(260);
                                if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                setState(261);
                                binop();
                                setState(262);
                                exp(2);
                            }
                        }
                    }
                    setState(268);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 23, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public final BinopContext binop() throws RecognitionException {
        BinopContext _localctx = new BinopContext(_ctx, getState());
        enterRule(_localctx, 36, RULE_binop);
        try {
            setState(274);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case SS:
                case PER:
                case STAR:
                case SLASH:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(269);
                    multop();
                }
                break;
                case MINUS:
                case PLUS:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(270);
                    addop();
                }
                break;
                case LT:
                case GT:
                case LE:
                case GE:
                case EE:
                case SQEQ:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(271);
                    relop();
                }
                break;
                case AND:
                case OR:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(272);
                    boolop();
                }
                break;
                case SQUIG:
                case LL:
                case GG:
                case AMP:
                case PIPE:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(273);
                    bitop();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }
